# sa-pipes-and-filters

./: README.md  pyproject.toml
src/: filters.py  main.py  video_capturer.py
